GALLERY – fix dropzone / other elements spacing

--- a/src/css/badsender-editor.less
+++ b/src/css/badsender-editor.less
@@ -493,6 +493,14 @@
 .gallery-panel {
   text-align: center;
 
+  // img-dropzone pane uploadzone
+
+  .uploadzone {
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   .mo-uploadzone {
     position: relative; 
     padding: 2em; 
@@ -535,8 +543,4 @@
     height: 20px; 
     background-color: black;
   }
-}
-
-.gallery-thumbs {
-  padding-top: 1em;
 }
